# arwin-vulkan

./: .clang-format  .gitignore  README.md
arwin/code/: .clangd  CMakeLists.txt  HandmadeMath.h  Makefile  Makefile.txt  TODO  VKBootstrap.h  VkBootstrap.cpp  arena.c  arena.cpp  arena.h  build.bat  camera.c  camera.cpp  camera.h  cgltf.h  fastgltf.cpp  initVulkan.c  initVulkan.cpp  initVulkan.h  main.c  main.cpp  run.bat  vk_descriptors.c  vk_descriptors.cpp  vk_descriptors.h  vk_engine.c  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.c  vk_initializers.cpp  vk_initializers.h  vk_loader.c  vk_loader.cpp  vk_loader.h  vk_mem_alloc.h  vk_pipelines.c  vk_pipelines.cpp  (+5 more)
arwin/data/assets/: shader.slang  text.slang
arwin/data/rooms/: room01.glb  room02.glb
arwin/misc/: shell.bat
arwin/shaders/: colored_triangle_mesh_classic.vert  colored_triangle_mesh_classic.vert.spv  gradient.comp  room_vertex_asm.txt  tex_image_classic.frag  tex_image_classic.frag.spv
